# adventofcode2022

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  test.py  tox.ini
.github/workflows/: automerge.yml  tox.yml
src/adventofcode2022/: main.py
src/adventofcode2022/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
src/adventofcode2022/utils/: advent_utils.py  generic_search.py  point.py
template/: cookiecutter.json
template/hooks/: pre_gen_project.py
template/{{cookiecutter.advendofcode2022}}/src/adventofcode2022/solutions/: {{cookiecutter.file_name}}.py
template/{{cookiecutter.advendofcode2022}}/tests/solutions/: test_{{cookiecutter.file_name}}_a.py  test_{{cookiecutter.file_name}}_b.py
tests/: test_advent_utils.py  test_graph.py  test_node.py  test_point.py  test_priority_queue.py  test_queue.py  test_stack.py
tests/solutions/: conftest.py  test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  test_day15_a.py  test_day15_b.py
