[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = "Advent of Code - 2022"
authors = ["Roel Adriaans <roel@adriaans.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"
click = "^8.1.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.0"
parse = "^1.19.0"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
black = "^22.10"
cookiecutter = "^2.1.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
python-dotenv = "^0.21.0"
tox = "^4.1.1"
pre-commit = "^2.21.0"
isort = "^5.11.4"

[tool.poetry.scripts]
adventofcode = "adventofcode2022.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
